# medical_triage

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  medical_triage_environment.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: EcgLine.jsx  PatientCard.css  PatientCard.jsx  ScoreGauge.css  ScoreGauge.jsx  TriagePanel.css  TriagePanel.jsx
server/: app.py
